# papr-liquidation-bot-rs

./: .env  .gitignore  Cargo.toml  LICENSE
src/: client.rs  info.rs  main.rs  papr_controller.rs  papr_subgraph.rs  provider.rs  purchase.rs  queries.rs  reservoir.rs  start.rs
src/abis/: PaprController.json
src/graphql/: controllers.graphql  paprSchema.graphql  vaultsByCollateralAndDebtPerCollateral.graphql  vaultsExceedingDebtPerCollateral.graphql
src/papr_subgraph/: client.rs  queries.rs
src/papr_subgraph/graphql/: allControllers.graphql  collateralByController.graphql  controllerByID.graphql  ongoingAuctionsByController.graphql  paprSchema.graphql  vaultsExceedingDebtPerCollateral.graphql
src/reservoir/: client.rs  mod.rs  oracle.rs  orders.rs  sell.rs
