[package]
name = "auction-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.2"
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = "1.22.0"
graphql_client = { version = "0.11.0", features = ["reqwest-blocking"] }
strum_macros = "0.24"