[package]
name = "auction-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.2"
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.22.0", features = ["macros"] }
graphql_client = { version = "0.11.0", features = ["reqwest-blocking"] }
strum_macros = "0.24"
once_cell = "1.17"
eyre = "0.6.8"
lazy_static = "1.4.0"
